# huginnDB

./: .gitignore  CHANGELOG.es.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: canary.yml  release.yml
docs/: 1.4.0_ROADMAP.md  1.5.0_ROADMAP.md  CANARY.md  MCP.es.md  MCP.md  MCP_CONNECTOR_ROADMAP.md  MONGODB_ROADMAP.md
sample-data/: chinook.db
src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.canary.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/mcp-server/: Cargo.toml
src-tauri/mcp-server/src/: main.rs
src-tauri/src/: app_identity.rs  error.rs  keepalive.rs  keychain.rs  lib.rs  log_bus.rs  main.rs  prefs.rs  ssh_known_hosts.rs  state.rs  store.rs  tab_state.rs  transfer.rs
src-tauri/src/commands/: app.rs  connection.rs  credentials.rs  dump.rs  feedback.rs  mcp.rs  mod.rs  mongo.rs  prefs.rs  query.rs  schema.rs  structure.rs  view.rs  workspaces.rs
src-tauri/src/db/: ddl.rs  dump.rs  mod.rs  pool.rs  sql.rs  ssh.rs  values.rs  view_ddl.rs
src-tauri/src/db/mongo/: mod.rs  query.rs  schema.rs  shell.rs  values.rs
src-tauri/src/mcp/: mod.rs
src-tauri/windows/: hooks.nsi
src/components/: AdHocDriverDialog.tsx  AdvancedFilterDialog.tsx  BitInput.tsx  CellEditor.tsx  CellInput.tsx  CellPreview.tsx  CliConnectChoiceDialog.tsx  CommandPalette.tsx  ConnectPasswordDialog.tsx  ConnectionDialog.tsx  ConnectionErrorBoundary.tsx  ConnectionList.tsx  Console.tsx  DataGrid.tsx  DetachedTabWindow.tsx  DocsDialog.tsx  DriverBadge.tsx  ExportProfilesDialog.tsx  FeedbackDialog.tsx  FileMenu.tsx  HelpMenu.tsx  ImportProfilesDialog.tsx  ManageConnectionsDialog.tsx  Markdown.tsx  QueryEditorTab.tsx  SandboxRibbon.tsx  SaveQueryDialog.tsx  SavedQueriesPanel.tsx  SchemaExplorer.tsx  SecurityTab.tsx  SettingsDialog.tsx  SideEditorPanel.tsx  StatusBar.tsx  StatusConnections.tsx  StructureEditorTab.tsx  TabSwitcher.tsx  TabbedArea.tsx  TableDataTab.tsx  UpdateBanner.tsx  ViewEditorTab.tsx  (+5 more)
src/components/settings/: useSettingsDialog.ts
src/components/settings/sections/: AboutSection.tsx  AppearanceSection.tsx  EditorSection.tsx  GeneralSection.tsx  GridSection.tsx  McpSection.tsx  PatchNotesCard.tsx  PrefRow.tsx  ShortcutRow.tsx  ShortcutsSection.tsx  UpdatesCard.tsx
src/components/ui/: button.tsx  context-menu.tsx  dialog.tsx  dropdown.tsx  fk-combobox.tsx  input.tsx  label.tsx  password-input.tsx  segmented.tsx  select.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
src/lib/: changelog.ts  cli-connect-bridge.ts  columnTypes.ts  confirmDestructive.ts  connection-health-bridge.ts  connection-sync-bridge.ts  connectionLabel.ts  constants.ts  copyFormats.ts  detectContentType.ts  dockview.ts  docs.ts  driver.ts  keybindings.ts  log-bridge.ts  monaco-setup.ts  monaco-themes.ts  monacoKeybindings.ts  monacoSql.ts  mongoUri.ts  prefs-sync-bridge.ts  releaseNotes.ts  sqlCompletions.ts  sqlKeywords.ts  sqlSplit.ts  tableRefresh.ts  tauri.ts  themes.ts  updater.ts  useConnectionGroups.ts  utils.ts
src/lib/i18n/: index.ts
src/lib/i18n/locales/: en.json  es.json
src/stores/: appFlavor.ts  cellEditor.ts  connectionHealth.ts  connections.ts  docsDialog.ts  feedbackDialog.ts  filterHistory.ts  fkOptions.ts  gridSelection.ts  logs.ts  persistedTabs.ts  preferences.ts  queryHistory.ts  savedQueries.ts  schema.ts  tabs.ts  theme.ts  ui.ts  update.ts  viewPrefs.ts  whatsNew.ts  workspaces.ts
