[package]
name = "huginndb"
version = "0.2.2"
description = "HuginnDB — minimal desktop database manager"
authors = ["HuginnDB contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "huginndb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-window-state = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "mysql",
    "sqlite",
    "json",
    "chrono",
    "uuid",
    "rust_decimal",
    "bigdecimal",
] }
keyring = { version = "3", features = [
    "windows-native",
    "apple-native",
    "sync-secret-service",
    "crypto-rust",
] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
url = "2"
async-trait = "0.1"
parking_lot = "0.12"
russh = { version = "0.60", default-features = false, features = [
    "ring",
    "flate2",
    "rsa",
] }
tokio-util = { version = "0.7", features = ["rt"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
