# This package is also the workspace root: `mcp-server/` is a sibling crate
# for the `huginndb-mcp` binary, kept out of this package's own `[[bin]]`
# list on purpose (see mcp-server/Cargo.toml and CLAUDE.md gotcha #19) so
# tauri-bundler's Windows bundling never enumerates it.
[workspace]
members = ["mcp-server"]
resolver = "2"

[package]
name = "huginndb"
version = "1.7.0"
description = "HuginnDB — minimal desktop database manager"
authors = ["HuginnDB contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "huginndb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-window-state = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
# Opens external URLs (e.g. the GitHub issue page from the in-app reporter) in
# the OS default browser. `window.open` does nothing inside the Tauri WebView,
# so URL opening has to go through this plugin's `open_url` command. Registered
# unconditionally; the capability scopes it to https/http (see capabilities).
tauri-plugin-opener = "2.0"
# Forwards a second launch's argv to the already-running instance instead of
# spawning a new window, so the CLI consolidates into one window (see lib.rs
# `handle_second_instance`). Desktop-only; registered under `#[cfg(desktop)]`.
tauri-plugin-single-instance = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "mysql",
    "sqlite",
    "json",
    "chrono",
    "uuid",
    "rust_decimal",
    "bigdecimal",
] }
mongodb = { version = "3", default-features = false, features = [
    "rustls-tls",
    "dns-resolver",
    "bson-3",
    "compat-3-3-0",
] }
keyring = { version = "3", features = [
    "windows-native",
    "apple-native",
    "sync-secret-service",
    "crypto-rust",
] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
url = "2"
async-trait = "0.1"
parking_lot = "0.12"
russh = { version = "0.60", default-features = false, features = [
    "ring",
    "flate2",
    "rsa",
] }
tokio-util = { version = "0.7", features = ["rt"] }
# HTTP client for the in-app issue reporter (commands::feedback). rustls so it
# reuses the ring/rustls tree already pulled by sqlx/mongodb/russh — no second
# TLS stack, no OpenSSL/system build dep. `json` for the GitHub REST payload.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
# Headless MCP (Model Context Protocol) connector — see the `mcp` feature and
# `src/mcp/`. Optional so a normal `tauri:build` never compiles the extra tree.
# `server` + `transport-io` are all the read-only stdio server needs.
rmcp = { version = "2.2", features = [
    "server",
    "transport-io",
    "macros",
], optional = true }
# Tool-argument JSON Schemas. Kept at the same "1" major rmcp itself pulls, so
# cargo unifies to a single `schemars` and the derived `JsonSchema` impls are
# the type rmcp expects. Direct dep (rather than rmcp's re-export) because the
# derive macro emits absolute `schemars::` paths.
schemars = { version = "1", optional = true }
anyhow = { version = "1", optional = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
# Compiles the `crate::mcp` module for the `huginndb-mcp` binary in the
# sibling `mcp-server` crate. Off by default: `pnpm tauri:build` / a plain
# `cargo build` here produce only the desktop app.
mcp = ["dep:rmcp", "dep:schemars", "dep:anyhow"]
